fix: make formatting optional

--- a/data-wrangling.ipynb
+++ b/data-wrangling.ipynb
@@ -63,11 +63,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json \n",
+    "\n",
     "df = pd.read_csv (r'RAW_recipes.csv')\n",
-    "df.to_json (r'RAW_recipes.json')\n",
+    "df.to_json (r'RAW_recipes-formatted.json')\n",
     "\n",
     "# run in shell\n",
-    "# cat RAW_recipes.json | jq > RAW_recipes-formatted.json"
+    "# cat RAW_recipes-formatted.json | jq > RAW_recipes-formatted.json"
    ]
   },
   {
@@ -85,10 +87,10 @@
     "\n",
     "df_new = df\n",
     "df_new[['steps', 'ingredients', 'tags', 'nutrition']] = df_tags\n",
-    "df_new.to_json(r'RAW_recipes-arrays.json')\n",
+    "df_new.to_json(r'RAW_recipes-arrays-formatted.json')\n",
     "\n",
     "# run in shell\n",
-    "# cat RAW_recipes-arrays.json | jq > RAW_recipes-arrays-formatted.json\n"
+    "# cat RAW_recipes-arrays-formatted.json | jq > RAW_recipes-arrays-formatted.json\n"
    ]
   },
   {
@@ -115,13 +117,6 @@
     "# run in shell\n",
     "# cat RAW_recipes-entities.json | jq > RAW_recipes-entities-formatted.json\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
