feat(sqlalchemy): insert recipe typed dataframe to designated psql table

--- a/data-wrangling.ipynb
+++ b/data-wrangling.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +116,41 @@
     "df_entities.to_json(r'RAW_recipes-entities.json')\n",
     "# run in shell\n",
     "# cat RAW_recipes-entities.json | jq > RAW_recipes-entities-formatted.json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy as alchemy\n",
+    "import json\n",
+    "\n",
+    "engine = alchemy.create_engine(\n",
+    "    'postgresql://postgres:example@172.20.0.2:5432/recipes')\n",
+    "postgreSQLConnection = engine.connect()\n",
+    "\n",
+    "df = pd.read_json(r'RAW_recipes-arrays-formatted.json')\n",
+    "pd.DataFrame.from_dict(df).head(10)\n",
+    "# df.head()\n",
+    "df.to_sql('recipe',\n",
+    "          postgreSQLConnection,\n",
+    "          schema=\"recipe\",\n",
+    "          if_exists='replace',\n",
+    "          index=False,\n",
+    "          dtype={\n",
+    "              'name': alchemy.types.VARCHAR,\n",
+    "              'description': alchemy.types.TEXT,\n",
+    "              'nutrition': alchemy.types.ARRAY(alchemy.types.INTEGER),\n",
+    "              'tags': alchemy.types.ARRAY(alchemy.types.TEXT),\n",
+    "              'submitted': alchemy.types.TIMESTAMP,\n",
+    "              'numberofsteps': alchemy.types.ARRAY(alchemy.types.INTEGER),\n",
+    "              'ingredients': alchemy.types.ARRAY(alchemy.types.TEXT),\n",
+    "              'steps': alchemy.types.ARRAY(alchemy.types.TEXT),\n",
+    "              'numberofingredients': alchemy.types.INTEGER\n",
+    "          })\n"
    ]
   }
  ],
