fix: data wrangle for Strapi

--- a/data-wrangling.ipynb
+++ b/data-wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "[231637 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,9 +369,20 @@
     "df_tags = df[['steps', 'ingredients', 'tags',\n",
     "              'nutrition']].applymap(lambda x: ast.literal_eval(x))\n",
     "\n",
+    "# df.set_axis([*df.columns,'created_by_id','updated_by_id','recipe_id'],axis=1,inplace=True)\n",
+    "\n",
+    "def addId(row):\n",
+    "   return row['id']\n",
+    "\n",
+    "df['recipe_id'] = df.apply(addId, axis=1)\n",
+    "df['updated_by_id'] = df.apply(addId, axis=1)\n",
+    "df['created_by_id'] = df.apply(addId, axis=1)\n",
+    "\n",
     "df_new = df\n",
     "df_new[['steps', 'ingredients', 'tags', 'nutrition']] = df_tags\n",
-    "df_new.to_json(r'RAW_recipes-arrays-formatted.json')\n",
+    "# df_new[['created_by_id','updated_by_id','recipe_id']] = df_ids\n",
+    "df_new.to_json(r'RAW_recipes-arrays-formatted-final.json')\n",
+    "# df_new.to_json(r'RAW_recipes-arrays-formatted.json')\n",
     "\n",
     "# run in shell\n",
     "# cat RAW_recipes-arrays-formatted.json | jq > RAW_recipes-arrays-formatted.json\n"
@@ -379,14 +390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df = pd.read_json(r'RAW_recipes-arrays-formatted.json')\n",
-    "\n",
     "\n",
     "def columnTuplesIntoObject(index):\n",
     "    return dict(list(map(lambda x: [x, df[x][index]], df.columns)))\n",
@@ -397,14 +407,53 @@
     "entities = [columnTuplesIntoObject(index) for index in range(len(df['name']))]\n",
     "\n",
     "df_entities = pd.DataFrame(data={'data': entities})\n",
-    "df_entities.to_json(r'RAW_recipes-entities.json')\n",
+    "df_entities.to_json(r'RAW_recipes-entities-formatted.json')\n",
     "# run in shell\n",
-    "# cat RAW_recipes-entities.json | jq > RAW_recipes-entities-formatted.json\n"
+    "# cat RAW_recipes-entities.json | jq >[[2022-06-22]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'a bit different  breakfast pizza', 'id': 31490, 'minutes': 30, 'contributor_id': 26278, 'submitted': '2002-06-17', 'tags': ['30-minutes-or-less', 'time-to-make', 'course', 'main-ingredient', 'cuisine', 'preparation', 'occasion', 'north-american', 'breakfast', 'main-dish', 'pork', 'american', 'oven', 'easy', 'kid-friendly', 'pizza', 'dietary', 'northeastern-united-states', 'meat', 'equipment'], 'nutrition': [173.4, 18.0, 0.0, 17.0, 22.0, 35.0, 1.0], 'n_steps': 9, 'steps': ['preheat oven to 425 degrees f', 'press dough into the bottom and sides of a 12 inch pizza pan', 'bake for 5 minutes until set but not browned', 'cut sausage into small pieces', 'whisk eggs and milk in a bowl until frothy', 'spoon sausage over baked crust and sprinkle with cheese', 'pour egg mixture slowly over sausage and cheese', 's& p to taste', 'bake 15-20 minutes or until eggs are set and crust is brown'], 'description': 'this recipe calls for the crust to be prebaked a bit before adding ingredients. feel free to change sausage to ham or bacon. this warms well in the microwave for those late risers.', 'ingredients': ['prepared pizza crust', 'sausage patty', 'eggs', 'milk', 'salt and pepper', 'cheese'], 'n_ingredients': 6, 'recipe_id': 31490, 'updated_by_id': 31490, 'created_by_id': 31490}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "# df = pd.read_json(r'RAW_recipes-arrays-formatted.json')\n",
+    "df = pd.read_json(r'RAW_recipes-arrays-formatted-final.json')\n",
+    "\n",
+    "\n",
+    "def columnTuplesIntoObject(index):\n",
+    "    return dict(list(map(lambda x: [x, df[x][index]], df.columns)))\n",
+    "\n",
+    "\n",
+    "# print(columnTuplesIntoObject(1))\n",
+    "\n",
+    "entities = [columnTuplesIntoObject(index) for index in range(len(df['name']))]\n",
+    "\n",
+    "dt = pd.DataFrame(data=entities)\n",
+    "records = dt.to_dict('records')\n",
+    "with open('RAW_recipes-entities-final.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(records, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "# run in shell\n",
+    "# cat RAW_recipes-entities.json | jq >[[2022-06-22]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +461,97 @@
     "import sqlalchemy as alchemy\n",
     "\n",
     "engine = alchemy.create_engine(\n",
-    "    'postgresql://postgres:example@172.19.0.2:5432/recipes')\n",
+    "    'postgresql://strapi:strapi@localhost:5432/strapi')\n",
+    "    # 'postgresql://postgres:example@localhost:5432/strapi')\n",
+    "postgreSQLConnection = engine.connect()\n",
+    "\n",
+    "# df = pd.read_json(r'RAW_recipes-arrays-formatted.json')\n",
+    "df = pd.read_json(r'RAW_recipes-entities-final.json')\n",
+    "pd.DataFrame.from_dict(df).head(10)\n",
+    "# df.head()\n",
+    "df.to_sql('recipes',\n",
+    "          postgreSQLConnection,\n",
+    "          schema=\"public\",\n",
+    "          if_exists='replace',\n",
+    "          index=True,\n",
+    "        #   index=False,\n",
+    "          dtype={\n",
+    "            'recipe_id': alchemy.types.INTEGER,\n",
+    "            'id': alchemy.types.INTEGER,\n",
+    "            'updated_by_id': alchemy.types.INTEGER,\n",
+    "            'created_by_id': alchemy.types.INTEGER,\n",
+    "            'name': alchemy.types.VARCHAR,\n",
+    "            'description': alchemy.types.TEXT,\n",
+    "            'nutrition': alchemy.dialects.postgresql.JSONB,\n",
+    "            'tags': alchemy.dialects.postgresql.JSONB, \n",
+    "            'submitted': alchemy.types.TIMESTAMP,\n",
+    "            'number_of_steps': alchemy.types.INTEGER,\n",
+    "            'ingredients': alchemy.dialects.postgresql.JSONB,\n",
+    "            'steps': alchemy.dialects.postgresql.JSONB, \n",
+    "            'number_of_ingredients': alchemy.types.INTEGER,\n",
+    "            'created_at': alchemy.types.DATETIME(timezone=False),\n",
+    "            'updated_at': alchemy.types.DATETIME(timezone=False),\n",
+    "            # 'published_at': alchemy.types.DATETIME(timezone=False),\n",
+    "          })\n",
+    "\n",
+    "with engine.connect() as con:\n",
+    "    con.execute('ALTER TABLE recipes ADD PRIMARY KEY (id);')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "Can't invoke function 'get_bind', as the proxy object has not yet been established for the Alembic 'Operations' class.  Try placing this code inside a callable.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m~/miniconda3/envs/gf/lib/python3.9/site-packages/alembic/op.py\u001b[0m in \u001b[0;36mget_bind\u001b[0;34m(*args, **kw)\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name '_proxy' is not defined",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-fd60d4041548>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# 'postgresql://postgres:example@localhost:5432/strapi')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mpostgreSQLConnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0malembic_connection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_bind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/gf/lib/python3.9/site-packages/alembic/op.py\u001b[0m in \u001b[0;36mget_bind\u001b[0;34m(*args, **kw)\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/gf/lib/python3.9/site-packages/alembic/util/langhelpers.py\u001b[0m in \u001b[0;36m_name_error\u001b[0;34m(name, from_)\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0m_name_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrom_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m             raise NameError(\n\u001b[0m\u001b[1;32m     97\u001b[0m                 \u001b[0;34m\"Can't invoke function '%s', as the proxy object has \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m                 \u001b[0;34m\"not yet been \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: Can't invoke function 'get_bind', as the proxy object has not yet been established for the Alembic 'Operations' class.  Try placing this code inside a callable."
+     ]
+    }
+   ],
+   "source": [
+    "# change types\n",
+    "import sqlalchemy as alchemy\n",
+    "from alembic import op\n",
+    "cols=['tags', 'ingredients', 'steps']\n",
+    "# connection = op.get_bind()\n",
+    "\n",
+    "engine = alchemy.create_engine(\n",
+    "    'postgresql://strapi:strapi@localhost:5432/strapi')\n",
+    "    # 'postgresql://postgres:example@localhost:5432/strapi')\n",
+    "postgreSQLConnection = engine.connect()\n",
+    "alembic_connection = op.get_bind()\n",
+    "\n",
+    "for col in cols:\n",
+    "\n",
+    "    op.alter_column(\n",
+    "        'recipes', col, existing_type=alchemy.types.ARRAY(alchemy.types.TEXT), type_=alchemy.dialects.postgresql.JSONB, postgresql_using=f\"{col}::jsonb\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy as sa \n",
+    "\n",
+    "engine = sa.create_engine(\n",
+    "    'postgresql://postgres:example@localhost:5432/recipes')\n",
     "postgreSQLConnection = engine.connect()\n",
     "\n",
     "df = pd.read_json(r'RAW_recipes-arrays-formatted.json')\n",
@@ -424,29 +563,31 @@
     "          if_exists='replace',\n",
     "          index=False,\n",
     "          dtype={\n",
-    "              'name': alchemy.types.VARCHAR,\n",
-    "              'description': alchemy.types.TEXT,\n",
-    "              'nutrition': alchemy.types.ARRAY(alchemy.types.INTEGER),\n",
-    "              'tags': alchemy.types.ARRAY(alchemy.types.TEXT),\n",
-    "              'submitted': alchemy.types.TIMESTAMP,\n",
-    "              'number_of_steps': alchemy.types.INTEGER,\n",
-    "              'ingredients': alchemy.types.ARRAY(alchemy.types.TEXT),\n",
-    "              'steps': alchemy.types.ARRAY(alchemy.types.TEXT),\n",
-    "              'number_of_ingredients': alchemy.types.INTEGER\n",
+    "              'name': sa.types.VARCHAR,\n",
+    "              'description': sa.types.TEXT,\n",
+    "              'nutrition': sa.dialects.postgresql.JSONB,\n",
+    "              #sa.types.ARRAY(sa.types.TEXT),\n",
+    "              'tags': sa.dialects.postgresql.JSONB,\n",
+    "                #sa.types.ARRAY(sa.types.TEXT),\n",
+    "              'submitted': sa.types.TIMESTAMP,\n",
+    "              'number_of_steps': sa.types.INTEGER,\n",
+    "              'ingredients': sa.dialects.postgresql.JSONB,\n",
+    "              #sa.types.ARRAY(sa.types.TEXT),\n",
+    "\n",
+    "              'steps': sa.dialects.postgresql.JSONB,\n",
+    "              #sa.types.ARRAY(sa.types.TEXT),\n",
+    "\n",
+    "              'number_of_ingredients': sa.types.INTEGER,\n",
+    "\t\t\t\t\t\t\t'created_at': sa.types.DATETIME(timezone=False),\n",
+    "\t\t\t\t\t\t\t'updated_at': sa.types.DATETIME(timezone=False),\n",
+    "\t\t\t\t\t\t\t'published_at': sa.types.DATETIME(timezone=False),\n",
     "          })\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 ('gf')",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +601,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "479ccbf51b3c57d4076233d65085da27063fb51781cf986a3f90b59fbaab6f74"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6fdc149b4fead171676fbbe11ee4177d017ab11d38d0044094ad4350fb8724a1"
+   }
   }
  },
  "nbformat": 4,
